--- a/microservice-poc-account-service/Dockerfile
+++ b/microservice-poc-account-service/Dockerfile
@@ -1,5 +1,5 @@
 FROM openjdk
 MAINTAINER Manikandan s.v.manikandan@gmail.com
-ADD target/account-service.jar account-service.jar
-ENTRYPOINT ["java", "-jar", "/account-service.jar"]
+ADD target/microservice-poc-account-service.jar microservice-poc-account-service.jar
+ENTRYPOINT ["java", "-jar", "/microservice-poc-account-service.jar"]
 EXPOSE 2222
