updated jenkins file discoveryservice

--- a/microservice-poc-discovery-service/Jenkinsfile
+++ b/microservice-poc-discovery-service/Jenkinsfile
@@ -1,6 +1,8 @@
 node {
 
     withMaven(maven:'maven') {
+    
+    	print 'Inside Discovery-Service Jenkins File'
 
         stage('Checkout') {
             git url: 'https://github.com/manikandansv/microservice-poc.git', credentialsId: 'microservice-poc', branch: 'master'
@@ -14,20 +16,20 @@ node {
             env.version = pom.version
         }
 
-        stage('Image') {
-            dir ('discovery-service') {
-                def app = docker.build "localhost:5000/discovery-service:${env.version}"
-                app.push()
-            }
-        }
-
-        stage ('Run') {
-            docker.image("localhost:5000/discovery-service:${env.version}").run('-p 8761:8761 -h discovery --name discovery')
-        }
-
-        stage ('Final') {
-            build job: 'account-service-pipeline', wait: false
-        }      
+//        stage('Image') {
+//            dir ('discovery-service') {
+//                def app = docker.build "localhost:5000/discovery-service:${env.version}"
+//                app.push()
+//            }
+//        }
+//
+//        stage ('Run') {
+//            docker.image("localhost:5000/discovery-service:${env.version}").run('-p 8761:8761 -h discovery --name discovery')
+//        }
+//
+//        stage ('Final') {
+//            build job: 'account-service-pipeline', wait: false
+//        }      
 
     }
 
