--- a/microservice-poc-discovery-service/Jenkinsfile
+++ b/microservice-poc-discovery-service/Jenkinsfile
@@ -27,6 +27,7 @@ node {
         }
         
         stage('Push Image') {
+        	print 'Push Image'
             steps {
         		   withDockerRegistry([ credentialsId: "6544de7e-17a4-4576-9b9b-e86bc1e4f903", url: "" ]) {
          			 sh 'docker push manisv/microservice-poc-discovery-service:${env.version}'
