--- a/microservice-poc-discovery-service/Jenkinsfile
+++ b/microservice-poc-discovery-service/Jenkinsfile
@@ -21,7 +21,8 @@ node {
         stage('Build Image') {
         	print 'Build Image'
             dir ('microservice-poc-discovery-service') {
-                sh 'docker build -t "manisv/microservice-poc-discovery-service:${env.version}" .'
+            	app = docker.build "manisv/microservice-poc-discovery-service:${env.version}"
+                //sh 'docker build -t "manisv/microservice-poc-discovery-service:${env.version}" .'
                 //app.push()
             }
         }
@@ -29,9 +30,9 @@ node {
         stage('Push Image') {
         	print 'Push Image'
             steps {
-        		   withDockerRegistry([ credentialsId: "6544de7e-17a4-4576-9b9b-e86bc1e4f903", url: "" ]) {
-         			 sh 'docker push manisv/microservice-poc-discovery-service:${env.version}'
-       			 }
+            		docker.withRegistry('https://registry.hub.docker.com','DockerHub'){
+            		    app.push()
+            		}
        		}
         }
 
