--- a/microservice-poc-customer-service/Jenkinsfile
+++ b/microservice-poc-customer-service/Jenkinsfile
@@ -17,7 +17,7 @@ node {
         }
 
         stage('Build Image') {
-            dir ('customer-service') {
+            dir ('microservice-poc-customer-service') {
                 app = docker.build "manisv/microservice-poc-customer-service:${env.version}"
                 app.push()
             }
