--- a/microservice-poc-gateway-service/Jenkinsfile
+++ b/microservice-poc-gateway-service/Jenkinsfile
@@ -17,7 +17,7 @@ node {
         }
 
         stage('Build Image') {
-            dir ('gateway-service') {
+            dir ('microservice-poc-gateway-service') {
                 app = docker.build "manisv/microservice-poc-gateway-service:${env.version}"
             }
         }
