--- a/microservice-poc-discovery-service/pom.xml
+++ b/microservice-poc-discovery-service/pom.xml
@@ -14,6 +14,11 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>javax.xml.bind</groupId>
+			<artifactId>jaxb-api</artifactId>
+			<version>2.3.0</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<finalName>microservice-poc-discovery-service</finalName>
