--- a/microservice-poc-discovery-service/pom.xml
+++ b/microservice-poc-discovery-service/pom.xml
@@ -26,7 +26,7 @@
 		</dependency>
 		<dependency>
 			<groupId>org.glassfish.jaxb</groupId>
-			<artifactId>jaxb-impl</artifactId>
+			<artifactId>jaxb-runtime</artifactId>
 			<version>2.3.0</version>
 		</dependency>
 		<dependency>
