--- a/microservice-poc-account-service/src/main/resources/application.yml
+++ b/microservice-poc-account-service/src/main/resources/application.yml
@@ -14,11 +14,13 @@ spring:
 eureka:  
   client:
     serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: http://hostip:8761/eureka/
   instance:
     hostname: localhost
     leaseRenewalIntervalInSeconds: 1
     leaseExpirationDurationInSeconds: 2
+    preferIpAddress: true
+    
       
 ribbon:
   eureka:
