--- a/microservice-poc-discovery-service/src/main/resources/application.yml
+++ b/microservice-poc-discovery-service/src/main/resources/application.yml
@@ -7,5 +7,8 @@ eureka:
   client:
     registerWithEureka: false
     fetchRegistry: false
+    serviceUrl:
+       defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
+       
   server:
     enableSelfPreservation: false 
