--- a/microservice-poc-account-service/src/main/resources/application.yml
+++ b/microservice-poc-account-service/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:  
-  port: ${PORT:2222}
+  port: 2222
 
 spring:  
   application:
@@ -15,9 +15,9 @@ eureka:
   enabled: true
   client:
     serviceUrl:
-      defaultZone: http://eureka-server:8761/eureka/
+      defaultZone: http://discovery:8761/eureka/
   instance:
-    hostname: localhost
+    preferIpAddress: true
     leaseRenewalIntervalInSeconds: 1
     leaseExpirationDurationInSeconds: 2
       
