--- a/microservice-poc-discovery-service/src/main/resources/application.yml
+++ b/microservice-poc-discovery-service/src/main/resources/application.yml
@@ -1,14 +1,19 @@
 server:  
-  port: ${PORT:8761}
+  port: 8761
     
 eureka:  
   instance:
-    hostname: eureka-server
+    hostname: discovery
   client:
     registerWithEureka: false
     fetchRegistry: false
     serviceUrl:
-       defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
-       
+       defaultZone: http://discovery:${server.port}/eureka/       
   server:
     enableSelfPreservation: false 
+
+spring:
+   cloud:
+      config:
+         discovery:
+            enabled: true
