--- a/microservice-poc-account-service/src/main/resources/application.yml
+++ b/microservice-poc-account-service/src/main/resources/application.yml
@@ -16,6 +16,8 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://discovery:8761/eureka/
+      registerWithEureka: true
+      fetchRegistry: true
   instance:
     preferIpAddress: true
     leaseRenewalIntervalInSeconds: 1
