--- a/microservice-poc-discovery-service/src/main/resources/application.yml
+++ b/microservice-poc-discovery-service/src/main/resources/application.yml
@@ -8,7 +8,7 @@ eureka:
     registerWithEureka: false
     fetchRegistry: false
     serviceUrl:
-       defaultZone: http://discovery:${server.port}/eureka/       
+       defaultZone: http://discovery:8761/eureka/       
   server:
     enableSelfPreservation: false 
 
