--- a/microservice-poc-discovery-service/src/main/resources/application.yml
+++ b/microservice-poc-discovery-service/src/main/resources/application.yml
@@ -1,30 +1,11 @@
 server:  
-  port: ${appPort:8761}
-    
-management:
-   contextPath: /admin
+  port: ${PORT:8761}
     
 eureka:  
-  environment: ${environment}
-  datacenter: ${dataCenter}
-  enableSelfPreservation: false 
   instance:
-    hostname: ${hostName}
-    preferIpAddress: true
+    hostname: localhost
   client:
     registerWithEureka: false
     fetchRegistry: false
-    serviceUrl:
-       defaultZone: ${peerUrls}      
-    
----
-spring:
-  profiles: standalone
-hostName: localhost
-environment: local
-dataCenter: ${hostName}
-peerUrls: http://localhost:${server.port}/eureka/
-
----
-spring:
-  profiles: peerAware
+  server:
+    enableSelfPreservation: false 
