--- a/microservice-poc-discovery-service/src/main/resources/application.yml
+++ b/microservice-poc-discovery-service/src/main/resources/application.yml
@@ -9,3 +9,4 @@ eureka:
     fetchRegistry: false
   server:
     enableSelfPreservation: false 
+    defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
